--- a/xs-app.json
+++ b/xs-app.json
@@ -3,8 +3,22 @@
   "authenticationMethod": "route",
   "routes": [
     {
+      "source": "^/resources/(.*)$",
+      "target": "/resources/$1",
+      "authenticationType": "none",
+      "destination": "ui5"
+    },
+    {
       "source": "^/sap/opu/odata/(.*)$",
       "target": "/sap/opu/odata/$1",
+      "destination": "ODATA_FIORI_GATEWAY_CLONING",
+      "authenticationType": "xsuaa",
+      "csrfProtection": false
+    },
+
+    {
+      "source": "^/coga/sap/bc/srt/rfc(.*)$",
+      "target": "/coga/sap/bc/srt/rfc/$1",
       "destination": "ODATA_FIORI_GATEWAY_CLONING",
       "authenticationType": "xsuaa",
       "csrfProtection": false
@@ -15,12 +29,6 @@
       "service": "sap-approuter-userapi"
      },
 
-    {
-      "source": "^/resources/(.*)$",
-      "target": "/resources/$1",
-      "authenticationType": "none",
-      "destination": "ui5"
-    },
     {
       "source": "^/test-resources/(.*)$",
       "target": "/test-resources/$1",
